--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,11 @@
   <title>React</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta property="og:title" content="React App">
-  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div id="app"></div>
-  <script src="assets/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
