Upgrade to webpack 2

--- a/src/dev.html
+++ b/src/dev.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
 </body>
-<script>
-  //global variable for production
-  //GA tracking script
-</script>
+
 </html>
